--- a/kbplus/grails-app/i18n/messages.properties
+++ b/kbplus/grails-app/i18n/messages.properties
@@ -14,12 +14,15 @@ default.blank.message=Property [{0}] of class [{1}] cannot be blank
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+default.accept.change.ie=Accept this change to make the same update to your issue entitlement
+default.accept.change.licence=Accept this change to make the same update to your licence
 
 default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=True
 default.boolean.false=False
 default.date.format=yyyy-MM-dd HH:mm:ss z
+default.date.format.notime=yyyy-MM-dd
 default.number.format=0
 
 default.created.message={0} {1} created
@@ -43,7 +46,6 @@ default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
-# Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
 typeMismatch.java.util.Date=Property {0} must be a valid Date
@@ -54,3 +56,222 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+
+titleInstance.label=Title Instance
+titleInstancePackagePlatform.label=TIPP
+subscription.instanceOf.label=Linked Subscription
+
+cv.membership.status.0=Pending
+cv.membership.status.1=Approved
+cv.membership.status.2=Rejected
+cv.membership.status.3=Auto Approved
+
+refdata.yno.Yes.icon=yes.png
+refdata.yno.No.icon=no.png
+refdata.yno.Other.icon=other.png
+
+license.delete.norights=You do not have sufficient administrative rights to delete the specified licence
+license.created.message=Licence successfully created
+
+help.location=http://www.jisc-collections.ac.uk/KnowledgeBasePlus/Help/User-guides/
+missingLicenseReference=** No licence reference **
+
+PendingAffiliationRequest=There are pending affiliation requests
+
+cv.roles.INST_ADM=Editor
+cv.roles.INST_USER=Read only user
+
+subscription.delete.norights=You do not have sufficient administrative rights to delete the specified subscription
+
+subscription.created.message=Your subscription has been created
+
+facet.so.startYear=Start Year
+facet.so.endYear=End Year
+facet.so.startYearAndMonth=Start Month
+facet.so.consortiaName=Consortia Name
+facet.so.contentProvider=Content Provider
+facet.so.cpname=Content Provider
+facet.so.type=Type
+
+org.properties=Organisation Settings
+
+springSecurity.login.title=Login
+springSecurity.login.header=Login
+springSecurity.login.username.label=Username
+springSecurity.login.password.label=Password
+springSecurity.login.remember.me.label=Remember Me
+springSecurity.login.button=Login
+
+jasper.upload.exists=A report template with the name {0} already exists.
+jasper.upload.saveError=An error occured while saving {0}.
+jasper.upload.wrongFormat=The file {0} is not a report template and will be ignored.
+jasper.upload.success=Upload successful.
+jasper.upload.overwrite=A report template with the name {0} already existed, and has been overwritten.
+
+jasper.generate.noSelection=Please select a report for download.
+
+propertyDefinition.name.unique=The new property name must be unique
+propertyDefinition.descr.nullable=The new property type description cannot be empty
+
+spotlight.new.missingprop=Please specify all Page attributes
+
+jasper.controller.invalidFormat=The provided format is not defined as available
+
+globalDataSync.label=Track Changes to Global Data
+globalDataSync.cancel=Cancel Tracking
+globalDataSync.cancel.confirm=Do you want to cancel tracking {0}?
+globalDataSync.cancel.confirm.noname=Do you want to cancel this tracking?
+globalDataSync.noname=no tracking name
+globalDataSync.updated.brackets=(updated: {0})
+
+public.licence=PublicLicence
+licence=Licence
+licence.plural=Licences
+licence.information= Licence Information
+licence.new=New Licence
+licence.current=Current Licences
+licence.name=Licence Name
+licence.details=Licence Details
+licence.property=Licence Property
+licence.properties=Licence Properties
+licence.property.search=Search by Licence Property
+licence.add.blank=Add Blank Licence
+licence.consortia.access.error=Consortia screen only available administrators for template licences with Licensing Consortium link.
+licence.consortia.noneset=No licensing consortium has been set for this licence.
+
+default.access.error=You do not have permission to view this page. Please request access on the profile page
+subscription.owner.label=Licence
+onix.licence=ONIX-PL Licence
+onixplUsageTerm.oplLicense.label=Opl Licence
+onixplUsageTerm.usageTermLicenseText.label=Usage Term Licence Text
+licence.slash.name=Name / Licence
+licence.change.to=Change to licence
+
+subscription=Subscription
+subscription.licence.connection=Connected to this licence through role {0}.
+subscription.change.to=Change to subscription
+subscription.upload.worksheet=Upload
+
+package=Package
+package.change.to=Change to package
+package.identifier.label=Identifier
+package.description.label=Description
+package.kbplusCompliant.label=KBPlus Compliant
+package.name.label=Name
+package.source.label=Source
+package.type.label=Type
+
+pendingchange.inprogress=Pending Changes are being processed. Please refresh screen to see progress
+onix.import.licence=Import ONIX-PL Licence
+onixplLicence.licence.label=ONIX-PL Licence
+onix.cannot.find.licence=Could not find ONIX-PL licence
+onixplLicence.label=OnixplLicence
+onixplLicence.status.label=Status
+onixplLicence.type.label=Type
+onixplLicence.document.label=Document
+
+identifierOccurrence.identifier.nullable=The provided identifier did not match the expected format.
+
+com.k_int.kbplus.CostItem.owner.nullable.error=Property {0} cannot be null, please enter a value.
+
+menu.institutions = Institutions
+menu.institutions.all_pkg = All Packages
+menu.institutions.all_titles=All Titles
+menu.institutions.comp_pkg = Compare Packages
+menu.institutions.comp_onix = Licence Comparison Tool (ONIX-PL)
+menu.institutions.dash = Dashboard
+menu.institutions.todo= ToDo List
+menu.institutions.lic = Licences
+menu.institutions.subs = Your subscriptions
+menu.institutions.ttls = Titles
+menu.institutions.comp_sub = Compare your subscriptions
+menu.institutions.gen_renewals=Generate Renewals Worksheet
+menu.institutions.imp_renew=Import Renewals
+menu.institutions.org_info=Organisation Information
+menu.institutions.sub_work=Create subscription worksheet
+menu.institutions.imp_sub_work=Import subscription worksheet
+menu.institutions.change_log=Change Log
+menu.institutions.finance=Finance
+menu.institutions.core_ttl=Institutional Titles (Edit Core Status)
+menu.institutions.affiliation=Please request institutional affiliations via your
+menu.institutions.help=Help
+menu.institutions.comp_lic=Compare your licences (KB+ Licence Properties)
+menu.institutions.emptySubscription=Add subscriptions
+menu.institutions.financeImport=Upload Cost Items
+menu.institutions.ebooks=EBooks Tracking and Decision Support
+
+menu.user.profile=Profile Page
+menu.institutions.claim_user=Claim Username
+menu.public.journalLicence= Public Journal Licences
+
+reminder.number=Number
+reminder.unit=Unit
+reminder.method=Method
+reminder.trigger=Trigger
+reminder.update=Delete or Active/Disabled
+reminder.lastNotification=Last Notification
+
+financials.help=Help
+financials.help.sorting=Sorting
+financials.help.sorting.info=via clickable title links of the following:
+financials.help.filterSearch=Filter Search
+financials.help.filterSearch.info=via the 4 input fields : Invoice#, Order#, Subscription, and Package, selecting filter mode as ON and submitting the search. On finishing with your results reset via the 'reset' button
+financials.help.pagination=Pagination
+financials.help.pagination.info=(<i>Results Navigation</i>) via the clickable links, below the results table
+financials.help.deleteCosts=Deleting Costs
+financials.help.deleteCosts.info=via checking the boxes attached to each cost item row individually or all and submitting by clicking 'remove selected
+financials.help.addNewCosts=Add New Cost
+financials.help.addNewCosts.info=via creation screen, after results, shortcut button select 'Add New Cost'
+financials.help.wildcard=Wildcard Search
+financials.help.wildcard.info=via the wildcard checkbox option underneath the search button. Return anything containing the term (e.g. 4561237, 566123, etc)
+financials.help.status=Problem/Update
+financials.help.type=Info
+financials.pagination.title=Select to change page of results or select the drop-down to change number of results shown
+financials.recent.title=Show recently updated costs in a modal window
+financials.addNew.title=Scrolls to create cost section
+financials.addNew.currencyType=Currency being used for purchase e.g. U.S. Dollars
+financials.addNew.inclSub=Whether or not to include in the subscription details page
+financials.addNew.costCategory=Category of cost item
+financials.addNew.taxCateogry=Type of tax with the cost item
+financials.addNew.exchangeRate=Exchange rate, will default to 1
+financials.addNew.costState=State of cost item e.g. estimate
+financials.filtersearch.title=Selecting search will filter results based on input i.e. invoice number
+financials.filtersearch.error=You need to enter/select from the 1 or more of the 4 options
+financials.filtersearch.deleteAll=Removed all checked delete values rows permanently
+financials.wildcard.title=Select this active for wildcard searching i.e. containing term
+financials.wildcard.inactive=Enable wildcard search (select checkbox).
+financials.deleteall.title=Select this to highlight all rows of cost items on screen
+finance.addNew.error=Can not save due to error with {0} property.
+finance.result.filtered.empty=No results found, reset filter search
+financials.result.filtered.info=INFO: {0}
+financials.result.filtered.failed=FAILED: {0}
+financials.result.filtered.success=SUCCESS: {0}
+financials.result.filtered.mode=Filter Mode
+financials.result.filtered.nomatch=No matches together
+financials.result.filtered.invalid=Try filtering without invalid criteria... Reset invalid input
+financials.field.order=order number
+financials.field.sub=subscription
+financials.field.subpkg=sub-Package
+financials.field.invoice=invoice number
+financials.result.filtered.success.msg1=Found {0} {1}(s): {2}
+financials.result.filtered.success.msg2=Found {0}: {1}
+financials.result.filtered.failed.msg1=No cost items exist, Invalid {0}: {1} with {2} detached instances
+financials.result.filtered.failed.msg2=Invalid {0}, no Cost items with:  {1}
+financials.permission.unauthorised=You do not have permission to view/create Financial Data for {0}
+
+admin.upload.issnL=CSV Processing has started in the background and will not require intervention
+
+sys.properties=Any System properties defined here will overwrite existing config settings when the 'refresh' button is pressed. Deleting a property will not have an effect until the system restarts.
+
+kbplus.pages.PublicPage=Knowledge Base+
+kbplus.pages.OrgsImportPage=KB+ Import Organisations
+
+mainmenu.dashboard=Dashboard
+mainmenu.institution=Institution
+instdash.searchprompt=Search your account
+instdash.searchdesc=Use the search below to see any aspect of your account
+
+
+dash.instsel.title=Select Institution
+dash.instsel.brief=Please select your institution
